<?xml version="1.0"?>
<package format="2">
  <name>message_to_web</name>
  <version>0.0.1</version>
  <description>
    A ROS package to process diagnostic messages and publish them to a web interface.
  </description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>diagnostic_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <export>
  </export>
</package>