<?xml version="1.0"?>
<package format="2">
  <name>pose_integrator</name>
  <version>0.0.0</version>
  <description>The pose_integrator package</description>

  <maintainer email="you@yourdomain.tld">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>roslib</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>roslib</exec_depend>

  <export>
  </export>
</package>