<?xml version="1.0"?>
<package format="2">
  <name>video_publisher</name>
  <version>1.1.3</version>
  <description>video_publisher package.</description>
  <maintainer email="821022334@qq.com">Hambin</maintainer>
  <license>BSD</license>
  <author email="821022334@qq.com">Hambin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>image_transport</depend>
  <depend>roslaunch</depend>
  <depend>cv_bridge</depend>

<!--  <export>
    <nodelet plugin="${prefix}/cloud_to_img_nodelets.xml" />
  </export>-->

</package>
