<?xml version="1.0"?>
<package format="2">
  <name>serial_com</name>
  <version>1.1.3</version>
  <description>serial_com.</description>
  <maintainer email="lei.wu@leapting.com">wl</maintainer>
  <license>BSD</license>
  <author email="lei.wu@leapting.com">wl</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
 
  <depend>sensor_msgs</depend>
  <depend>roslaunch</depend>


<!--  <export>
    <nodelet plugin="${prefix}/cloud_to_img_nodelets.xml" />
  </export>-->

</package>
